tests/bad/methods_redef.ae
/// fail: Method is already defined for this type

struct Foo {}
def Foo::bar(this) {}
def Foo::bar(this) {}